email badly fixed

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -44,7 +44,8 @@
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:id="@+id/txtusername"
-                    android:hint="Username"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
                     android:textSize="10sp"
                     android:layout_weight="5"
                     android:backgroundTint="#10BFEA"
