--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,6 +47,30 @@
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:textSize="10sp"
+                android:hint="Nama"
+                android:layout_weight="5"
+                android:id="@+id/txt_nama"
+                android:backgroundTint="#10BFEA"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_weight="0"
+                android:src="@drawable/user"
+                android:layout_marginRight="15dp"
+                />
+            <EditText
+                android:layout_gravity="center"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:textSize="10sp"
                 android:hint="email"
                 android:inputType="textEmailAddress"
                 android:layout_weight="5"
