--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -36,7 +36,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_weight="0"
-                    android:src="@drawable/user"
+                    android:src="@drawable/email"
                     android:layout_marginRight="15dp"
                     />
                 <EditText
@@ -61,7 +61,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_weight="0"
-                    android:src="@drawable/lock"
+                    android:src="@drawable/password"
                     android:layout_marginRight="15dp"
                     />
                 <EditText
