--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -63,7 +63,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_weight="0"
-                android:src="@drawable/user"
+                android:src="@drawable/email"
                 android:layout_marginRight="15dp"
                 />
             <EditText
@@ -89,7 +89,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_weight="0"
-                android:src="@drawable/user"
+                android:src="@drawable/password"
                 android:layout_marginRight="15dp"
                 />
             <EditText
@@ -115,7 +115,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_weight="0"
-                android:src="@drawable/user"
+                android:src="@drawable/password"
                 android:layout_marginRight="15dp"
                 />
             <EditText
@@ -140,7 +140,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_weight="0"
-                android:src="@drawable/user"
+                android:src="@drawable/telepon"
                 android:layout_marginRight="15dp"
                 />
             <EditText
