--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_signIn2"
+        android:id="@+id/btn_updtMail"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="140dp"
         android:layout_height="30dp"
