--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
-            android:text="Forgot your password?"
+            android:text="Lupa Password Ya?"
             android:textSize="20dp" />
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_marginBottom="10dp"
             android:gravity="center_horizontal"
             android:padding="10dp"
-            android:text="To reset password, enter your email, press the button and check mail to follow instruction."
+            android:text="Untuk mengatur ulang password, silakan masukkan email Anda. Kemudian cek email Anda dan ikuti langkah-langkah berikutnya."
             android:textSize="14dp" />
 
         <EditText
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:hint="Your email here"
+            android:hint="Masukkan email Anda"
             android:inputType="textEmailAddress" />
 
         <Button
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Reset Password" />
+            android:text="Atur Ulang Password" />
 
         <Button
             android:id="@+id/btn_back"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@null"
-            android:text="BACK"
+            android:text="KEMBALI"
             android:textColor="@android:color/holo_blue_dark" />
 
     </LinearLayout>
