--- a/app/src/main/res/layout/fragment_aktivitas.xml
+++ b/app/src/main/res/layout/fragment_aktivitas.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/aktivitas_fragment">
+    android:id="@+id/aktivitas_fragment"
+    android:padding="15dp">
 
     <TextView
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="AKTIV"/>
+        android:text="Belum Ada Aktivitas." />
 
 </RelativeLayout>
