--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_promo"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/promo_black"
         android:title="Promo" />
 
     <item
         android:id="@+id/navigation_jadwal"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/jadwal_black"
         android:title="Jadwal" />
 
     <item
         android:id="@+id/navigation_aktivitas"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/aktivitas_black"
         android:title="Aktivitas" />
 
 </menu>
