--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.alex.oxylaundryonline.AboutActivity"
     android:padding="15dp">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/biru"
+        />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
