--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
     android:padding="15dp">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/biru"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
