--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreen"
     android:background="@drawable/gradient">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/biru"
+        />
 
     <ImageView
         android:layout_width="250dp"
