--- a/app/src/main/res/layout/fragment_jadwal.xml
+++ b/app/src/main/res/layout/fragment_jadwal.xml
@@ -2,6 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/jadwal_fragment">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/biru"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,6 +14,7 @@
         android:orientation="vertical"
         android:padding="20dp"
         >
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
