--- a/app/src/main/res/layout/fragment_promo.xml
+++ b/app/src/main/res/layout/fragment_promo.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/promo_fragment"
     android:padding="15dp">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/biru"
+        />
 
     <TextView
         android:layout_width="match_parent"
